tests/transpiler/x/java/group_by_left_join.error
exit status 1
Main.java:35: error: <identifier> expected
         o;
          ^
Main.java:36: error: <identifier> expected
        Item3(Data1 c,  o) {
                         ^
2 errors
